--- a/PnbPartKeepr/templates/PnbPartKeepr/partcategory_list.html
+++ b/PnbPartKeepr/templates/PnbPartKeepr/partcategory_list.html
@@ -13,51 +13,46 @@
 {% endblock %}
 
 {% block page-content %}
-<div class="d-flex justify-content-around pnbpartkeepr-search-bar">
-    <div class="pnbpartkeepr-search-item">
-        <div class="pnbpartkeepr-search-title">
-            {% trans "Part Categories list" %}
-        </div>
-    </div>
-    <div class="pnbpartkeepr-search-item">
-        {% include "PnbPartKeepr/search_list.html" with name="name"         value=request.GET.name%}
-    </div>
-    <div class="pnbpartkeepr-search-item">
-        {% include "PnbPartKeepr/search_list.html" with name="description"  value=request.GET.description%}
-    </div>
-    <div class="pnbpartkeepr-search-item">
-        <a href="{% url "pnbpartkeepr.partcategory.create" %}">
-            <button class="btn btn-primary">
-                <span class="fas fa-plus"></span>
-                {% trans 'Add a New one' %}
-            </button>
-        </a>
-    </div>
-</div>
+{% include "PnbPartKeepr/search_list.html" %}
 <table class="table">
     <tr>
         <th scope="col">{% trans "Id"               %}</th>
         <th scope="col">{% trans "Name"             %}</th>
-        <th scope="col">{% trans "Parent"           %}</th>
+        <th scope="col">{% trans "SubCategory"      %}</th>
+        <th scope="col">{% trans "Parts"            %}</th>
         <th scope="col">{% trans "Description"      %}</th>
+        <th scope="col">{% trans "Parent"           %}</th>
         <th scope="col">{% trans "Action"           %}</th>
     </tr>
 
-    {% for pc in object_list %}
-    {% comment %}
-    {% endcomment %}
-    <tr onclick="document.location='{{ pc.get_absolute_url }}';" 
-        class="pnbpartkeepr-elem-list"
+    {% for e in object_list %}
+    <tr class="pnbpartkeepr-elem-list" 
         >
-        <td>{{ pc.id }}</td>
-        <td>{{ pc.name }}</td>
-        <td>{% include "PnbPartKeepr/cell_name.html"     with elem=pc.parent %}</td>
-        <td>{{ pc.description }}</td>
-        <td>{% include "PnbPartKeepr/cell_action.html"   with elem=pc %}</td>
+        <td>{{ e.id }}</td>
+        <td class="pnbpartkeepr-elem-list-link"
+        onclick="document.location='{% url "pnbpartkeepr.partcategory.detail" pk=e.id %}';" 
+        >{{ e.name|default:"No name" }}</td>
+        <td class="pnbpartkeepr-elem-list-link"
+        onclick="document.location='{% url "pnbpartkeepr.partcategory.list" pk=e.id %}';" 
+        >{{ e.get_descendant_count }}</td>
+        <td class="pnbpartkeepr-elem-list-link"
+        onclick="document.location='{% url "pnbpartkeepr.part.list" %}?category_id={{ e.id }}';" 
+        >{{ e.get_part_nbr }}</td>
+        <td>{{ e.description|default:"No description"|truncatechars:40 }}</td>
+        <td>{% include "PnbPartKeepr/cell_name.html" with elem=e.parent %}</td>
+        <td>{% include "PnbPartKeepr/cell_action.html" with elem=e %}</td>
     </tr>
     {% empty %}
-    {% trans "No Part" %}
+    {% include "PnbPartKeepr/empty_list.html" with label="No part category" %}
     {% endfor %}
 </table>
 {% endblock %}
 
+{% block page-footer %}
+<a href="{% url "pnbpartkeepr.partcategory.create" %}">
+    <button class="btn btn-primary">
+        <span class="fas fa-plus"></span>
+        {% trans 'Add a New one' %}
+    </button>
+</a>
+{% endblock %}
