--- a/templates/base.html
+++ b/templates/base.html
@@ -49,9 +49,12 @@
         </div>
 
         {% block page-content %}TODO{% endblock %}
+        <div class="d-flex justify-content-around">
         {% if is_paginated %}
         {% bootstrap_pagination page_obj extra=request.GET.urlencode %}
         {% endif %}
+        {% block page-footer %}{% endblock %}
+        </div>
 
         {% if user.is_anonymous %}
         {% trans "last connection" %}
